--- a/Info.plist
+++ b/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>DungeonMaster.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.brendcorp.DungeonMaster</string>
 	<key>CFBundleInfoDictionaryVersion</key>
