--- a/DungeonKeeper/DungeonKeeper-Info.plist
+++ b/DungeonKeeper/DungeonKeeper-Info.plist
@@ -29,7 +29,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>DungeonKeeper.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.brendcorp.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
